--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,10 @@ homepage: https://gitlab.com/ext/dart-opengl
 environment:
   sdk: '>=2.3.0 <3.0.0'
 
+dependencies:
+  ffi_utils:
+    path: ../dart-ffi_utils
+
 dev_dependencies:
   pedantic: ^1.0.0
   glfw: any
