--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: opengl
 description: OpenGL 4.6 FFI bindings for Dart. Supports Windows and Linux desktops.
-version: 0.1.0+2
+version: 0.2.0
 author: root ext <root.ext@gmail.com>
 homepage: https://gitlab.com/ext/dart-opengl
 
 environment:
-  sdk: '>=2.3.0 <3.0.0'
+  sdk: '>=2.7.0 <3.0.0'
 
 dependencies:
   ffi_utils:
