--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,11 @@
 name: opengl
 description: OpenGL 4.6 FFI bindings for Dart. Supports Linux, macOS and Windows.
-version: 0.3.4
+version: 1.0.0
 author: root ext <root.ext@gmail.com>
 homepage: https://gitlab.com/ext/dart-opengl
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  ffi: ^0.1.3
-
-dev_dependencies:
-  glfw: ^0.2.2
-  pedantic: ^1.0.0
-  ffi_utils: ^0.1.1
-
+  ffi: 1.0.0
