--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ author: root ext <root.ext@gmail.com>
 homepage: https://gitlab.com/ext/dart-opengl
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   ffi: 1.0.0
